@@ -9,21 +9,40 @@ import java.security.PrivilegedAction;
 public class Act5_6MainJaasAutentication {
     @SuppressWarnings({"rawtypes", "unchecked"})
     public static void main(String[] args) {
-        System.out.println("Iniciando programa...");
 
-        CallbackHandler handler = new Act5_5MyCallbackHandler("pedro", "abcd");
-        System.out.println("CallbackHandler creado.");
-
-        try {
-            LoginContext loginContext = new LoginContext("EjemploLogin", handler);
-            System.out.println("LoginContext creado.");
-
+        CallbackHandler handler = new Act5_6MyCallbackHandler("pedro", "abcd");
+        LoginContext loginContext = null;
+        try{
+            loginContext = new LoginContext("EjemploLogin", handler);
             loginContext.login();
-            System.out.println("✅ Usuario autenticado correctamente.");
-        } catch (LoginException e) {
-            System.err.println("ERROR: No se puede autenticar el usuario.");
-            e.printStackTrace();  // Esto mostrará el error completo
+            System.out.println("Usuario autenticado.....");
+        }catch (Exception e){
+            System.err.println("ERROR=> No se puede autenticar el usuario");
             System.exit(-1);
         }
+        //Una vez autenticado se obtiene el Subject
+        Subject subject = loginContext.getSubject();
+
+        //Se crea un objeto PrivilegedAction
+        PrivilegedAction action = new Act5_6EjemploAccion();
+        try{
+            //El sujeto realiza la accion definida en la clase
+            //EjemploAccion como usuario autenticado bajo las
+            //restricciones de seguridad definidas,
+            //se usa el metodo doAsPrivileged()
+            System.out.println("Ejecutando acción como usuario autenticado...");
+        }catch (SecurityException se){
+            System.out.println("ACCESO DENEGADO => " + se.getMessage());
+        }
+        try{
+            //Desconectamos el usuario
+            loginContext.logout();
+        }catch (LoginException le){
+            System.out.println("Logout: " + le.getMessage());
+            System.exit(-1);
+        }
+
     }
 }
+//java -Djava.security.auth.login.config=file:/home/usuario/PSP/Tema5/Tema5/target/classes/jaas.config      -cp target/classes org.example.Act5_6MainJaasAutentication
+// java -Djava.security.manager -Djava.security.policy=policy.config -Djava.security.auth.login.config=file:/home/usuario/PSP/Tema5/Tema5/target/classes/jaas.config -cp target/classes org.example.Act5_6MainJaasAutentication
